tests/paczka1/small_fuzzy/51459762.err
Error in line 11: VwEAAJ S602 24,4
Error in line 15: VwEAAJ A232 41,2
